render-wasm/src/render/svg/tests/snapshots/render_wasm__render__svg__tests__exports_a_masked_group_whose_mask_is_a_group.snap
---
source: src/render/svg/mod.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100" height="100"><defs><mask id="mask1" maskUnits="userSpaceOnUse" mask-type="alpha">
	<rect fill="#B1B2B5" y="40" width="100" height="20"/>
	<rect fill="#B1B2B5" x="40" width="20" height="100"/>
</mask></defs><g mask="url(#mask1)">
	<ellipse fill="#1A4DE5" cx="50" cy="50" rx="50" ry="50"/>
</g></svg>
