render-wasm/src/render/svg/tests/snapshots/render_wasm__render__svg__tests__exports_a_path_with_a_solid_center_stroke.snap
---
source: src/render/svg/mod.rs
expression: "render(&pool, id)"
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="120" height="100">
	<path fill="#CCC" transform="translate(10 10)" d="M50 0L100 80L0 80L50 0Z"/>
	<path fill="none" stroke="#080" stroke-width="10" stroke-miterlimit="4" transform="translate(10 10)" d="M50 0L100 80L0 80L50 0Z"/>
</svg>
